# rust-backtrace-parser

./: .travis.yml  Cargo.toml  README.md
src/: grammar.pest  lib.rs  parse.rs  parser.rs
tests/: parse.rs
tests/fixtures/: full.txt  no-info.txt  unresolved.txt
